kubernetes/apps/youtrack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtrack
  namespace: youtrack
  labels:
    app.kubernetes.io/name: youtrack
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: youtrack
