kubernetes/apps/youtrack/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtrack-tailscale
  namespace: youtrack
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: youtrack
      port:
        number: 8080
  tls:
    - hosts:
        - youtrack
